# budlang

./: .gitignore  Bud-Assembly-Reference.md  Bud-Language-Reference.md  Cargo.toml  README.md
.github/workflows/: miri.yml
.rustme/: config.ron  docs.md  header.md  repo-readme.md  vm-docs.md  vm-header.md
benchmarks/: Cargo.toml
benchmarks/benches/: budmap.rs
budlang/: Cargo.toml  README.md
budlang-cli/: Cargo.toml
budlang-cli/src/: bud.rs  main.rs
budlang-cli/tests/: tests.rs  ui-tests.rs
budlang/examples/: budgeting.rs  fib-ast.rs  fib-vm.rs  fib.rs  rust-types.rs
budlang/src/: .crate-docs.md  ast.rs  ir.rs  lib.rs  map.rs  parser.rs  tests.rs  vm.rs
budlang/src/map/: tests.rs
budlang/src/vm/: dynamic.rs  list.rs  map.rs  string.rs
budvm/: Cargo.toml  README.md
budvm/examples/: fib-asm.rs  fib-ir.rs  fib-vm.rs  rust-types-vm.rs
budvm/src/: .crate-docs.md  dynamic.rs  ir.rs  lexer_util.rs  lib.rs  list.rs  map.rs  string.rs  symbol.rs
budvm/src/budmap/: tests.rs
budvm/src/ir/: asm.rs
coverage/: index.html
coverage/examples/: budgeting.rs.html  fib-ast.rs.html  fib-vm.rs.html  fib.rs.html  index.html
coverage/src/: ast.rs.html  index.html  ir.rs.html  lib.rs.html  parser.rs.html  symbol.rs.html  tests.rs.html  vm.rs.html
examples/: budgeting.rs  fib-ast.rs  fib-vm.rs  fib.rs
main/: crates.js  help.html  search-index.js  settings.html  source-files.js
main/bud/: all.html  enum.SourceId.html  fn.main.html  fn.print_error.html  fn.print_value.html  index.html  macro.unwrap_or_print_error.html  macro.unwrap_or_print_error_and_exit!.html  macro.unwrap_or_print_error_and_exit.html  sidebar-items.js  static.DEFAULT_MULTILINE_INDICATOR.html  static.DEFAULT_PROMPT_INDICATOR.html  static.DEFAULT_VI_INSERT_PROMPT_INDICATOR.html  static.DEFAULT_VI_NORMAL_PROMPT_INDICATOR.html  struct.Args.html  struct.BudPrompt.html  struct.BudValidator.html  struct.SourceCache.html
main/budlang/: all.html  enum.Error.html  enum.Intrinsic.html  index.html  sidebar-items.js  struct.Bud.html  struct.BudEnvironment.html  trait.Environment.html
main/budlang_cli/: all.html  enum.SourceId.html  fn.main.html  fn.print_error.html  index.html  macro.unwrap_or_print_error!.html  macro.unwrap_or_print_error.html  macro.unwrap_or_print_error_and_exit.html  sidebar-items.js  static.DEFAULT_MULTILINE_INDICATOR.html  static.DEFAULT_PROMPT_INDICATOR.html  static.DEFAULT_VI_INSERT_PROMPT_INDICATOR.html  (+5 more)
src/: .crate-docs.md  ast.rs  ir.rs  lib.rs  optimizer.rs  parser.rs  symbol.rs  tests.rs  vm.rs
(+333 files in other folders)
