[package]
name = "budvm"
version = "0.1.0"
description = "A safe, fast, lightweight virtual machine written in Rust."
repository = "https://github.com/khonsulabs/budlang"

# Important information for consumers of this crate.
license = "MIT OR Apache-2.0"
rust-version = "1.62.0"
edition = "2021"

# Additional metadata
keywords = ["virtual-machine", "vm"]
categories = ["compilers"]
readme = "./README.md"
